[package]
name = "branchbound"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap-markdown = "0.1"
csv = "1.1.6"
rand = "0.8.5"
rustc-hash = "1.1.0"
smallvec = "1.13"

[profile.release]
debug = 1
codegen-units = 1
